--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -64,8 +64,8 @@ a:hover {
 }
 
 header {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 10px;
+  padding-bottom: 90px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
   background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
@@ -91,6 +91,13 @@ header h2 {
 
 .inner {
   position: relative;
+  width: 940px;
+  margin: 0 auto;
+}
+.inner2 {
+  position: relative;
+  padding-top: 0px;
+  padding-bottom: 0px;
   width: 940px;
   margin: 0 auto;
 }
